styles.css
body {
    margin: 0px 0px 10px 0px;
    font-family: "Montserrat", system-ui;
}
h2 {
    margin: 20px 0px;
    color: 0F4C75;
    font-weight: bold;
    text-align: center;
}
h3 {
    margin: 10px 0px;
    color: #3282B8;
    font-weight: bold;
    text-align: center;
}
p, li {
    color: rgb(50, 50, 50);
}
dl {
    margin-top: 0px;
}
dd {
    margin: 10px 0px 10px 40px;
    line-height: 1.75;
}

#checkbtn {
    display: none;
    cursor: pointer;
    margin-right: 15px;
}
#menu-check:checked ~ .nav-mobile {
    display: block;
}
#email-button:hover {
    cursor: pointer;
}
#main-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}
#about, #skills {
    scroll-margin-top: 54px;
    margin-bottom: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 60%;
}
#experience, #projects {
    scroll-margin-top: 54px;
    margin-bottom: 50px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    width: 60%;
}
#skills-container {
    display: flex;
    justify-content: space-between;
    width: 80%;
    gap: 25px;
}
#footer-attribution {
    text-align: center;
    margin: 0px;
    font-size: 12px;
}

.banner {
    position: sticky;
    top: 0;
    background-color: #0F4C75;
    margin: 0px;
    padding: 7px 0px;
    text-align: center;
    display: flex;
    justify-content: right;
    align-items: center;
}
.favicon {
    height: 40px;
    margin-left: 10px;
}
.nav-mobile {
    display: none;
    position: absolute;
    top: 54px;
    right: 0;
    background: #0F4C75;
    width: 15vw;
    min-width: 120px;
    padding-top: 5px;
}
.nav-mobile a {
    color: white;
    display: block;
    margin: 0px 0px 10px 0px;
}
.banner-spacing {
    margin-left: auto;
    display: flex;
}
.banner-button {
    margin-right: 2vw;
    color: white;
    font-size: 1.15em;
    text-decoration: none;
}
.banner-button:hover {
    cursor: pointer;
    text-decoration: underline;
}
.portrait {
    margin-top: 30px;
    align-items: center;
    width: 25vw;
    max-width: 200px;
}
.about-me {
    max-width: 75%;
}
.todo-list {
    margin: 0px;
}
.todo-item {
    line-height: 1.5;
}
.notification {
    visibility: hidden;
    background-color: #3282B8;
    color: white;
    text-align: center;
    border-radius: 10px;
    padding: 6px;
    position: absolute;
    z-index: 1;
    font-size: 0.9em;
    top: -35px;
    left: -30%;
    transition: visibility 0s, opacity 0.3s ease;
    opacity: 0;
}
.notification.show {
    visibility: visible;
    opacity: 1;
}
.icon-container {
    position: relative;
    display: flex;
    gap: 20px
}
.position-title {
    color: #3282B8;
    font-weight: bold;
}
.position-info {
    color: rgb(120, 120, 120);
    font-size: 0.9em;
    font-weight: bold;
    font-style: italic;
}
.icon {
    width: 24px;
    height: 24px;
}
.project-title {
    display: flex;
    align-items: center;
    gap: 10px;
}
.project-description {
    margin: 0px 0px 20px 40px;
    line-height: 1.5;
}
.skills-column {
    flex: 1;
    text-align: center;
}
.skills-list {
    margin: 8px;
}

@media (max-width: 768px) {
    #about, #experience, #projects, #skills, #education-container {
        width: 90%;
    }
    #skills-container {
        flex-direction: column;
        align-items: center;
    }
    .skills-column {
        width: 100%;
    }
    #checkbtn {
        display: block;
    }
    #banner-buttons {
        display: none;
    }
}

#backpacking-container {
    display: none;
    padding: 20px 10%;
}

.gearlist-table {
    border-collapse: collapse;
    width: 100%;
}
.gearlist-table td {
    border: 1px solid #ccc;
    padding: 10px;
    text-align: left;
}
.gearlist-table th {
    border: 1px solid #ccc;
    padding: 10px;
    text-align: center;
    color: #0F4C75;
}

